--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "firebase": "^10.12.2",
     "flowbite": "^2.3.0",
     "formik": "^2.4.6",
+    "keep-react": "^1.3.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
